update after internship

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "cSpell.words": [
+        "Elementor",
+        "Heyrieux",
+        "instagrameuse",
+        "Magix",
+        "maitresse",
+        "Maixent",
+        "Makemusic",
+        "Protools",
+        "Samplitude",
+        "Sololearn",
+        "Ustariz"
+    ]
 }
